--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.20",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
+        "tailwindcss": "^3.4.11",
         "vite": "^5.0.0"
     }
 }
